# livepush

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sjy/livepushmine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DZConstDefine.h  DZJNICall.cpp  DZJNICall.h  DZLivePush.cpp  DZLivePush.h  DZPacketQueue.cpp  DZPacketQueue.h  native-lib.cpp
app/src/main/java/com/sjy/livepushmine/: LivePush.java  MainActivity.java
app/src/main/java/com/sjy/livepushmine/camera/: MyCameraHelper.java  MyRender.java
app/src/main/java/com/sjy/livepushmine/camera/widget/: CameraFocusView.java  MyCameraView.java
app/src/main/java/com/sjy/livepushmine/livepush/: BaseVideoPush.java  DefaultLivePush.java
app/src/main/java/com/sjy/livepushmine/opengl/: BaseGLSurfaceView.java  BaseRender.java  DZGLSurfaceView.java  EglHelper.java  FboRender.java  IFboRender.java  Utils.java
app/src/main/java/com/sjy/livepushmine/record/: RecorderRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sjy/livepushmine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
